added route tables/{id}/scores + doc
